2013-07-10  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	Menu関連をいくつか追加

2013-07-06  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	XorRandom.cs不具合修正

	* red-rogue-cs:
	XorRandom.csを追加

2013-07-04  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	Node.csを追加

	* red-rogue-cs:
	dos改行のソースを修正

	* red-rogue-cs:
	解像度変更、タイトル表示対応

2013-07-02  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	HiddenIntを追加

2013-06-30  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	UserDataを追加、ほとんどコメントアウト、TITLEまで遷移するように

2013-06-29  tasogare66 <tasogare66@gmail.com>

	* red-rogue-cs:
	projectを追加

以上