@@ -62,6 +62,9 @@
     <Compile Include="src\com\robotacid\ui\menu\MenuOption.cs" />
     <Compile Include="src\com\robotacid\ui\menu\MenuList.cs" />
     <Compile Include="src\com\robotacid\ui\menu\TitleMenu.cs" />
+    <Compile Include="src\com\robotacid\ui\menu\MenuCarousel.cs" />
+    <Compile Include="src\com\robotacid\geom\Pixel.cs" />
+    <Compile Include="src\com\robotacid\level\Room.cs" />
   </ItemGroup>
   <ItemGroup>
     <ShaderProgram Include="shaders\Simple.fcg" />
@@ -82,6 +85,7 @@
     <Folder Include="src\com\robotacid\level\" />
     <Folder Include="src\com\robotacid\ui\" />
     <Folder Include="src\com\robotacid\ui\menu\" />
+    <Folder Include="src\com\robotacid\geom\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedShaderProgram Include="lib\SimpleSprite.fcg" />
