@@ -1,3 +1,8 @@
+2013-07-11  tasogare66 <tasogare66@gmail.com>
+
+	* red-rogue-cs:
+	level関連、Room.csなど追加
+
 2013-07-10  tasogare66 <tasogare66@gmail.com>
 
 	* red-rogue-cs:
